CHATS_SIT/force-app/main/default/objects/T_SBSD_INDIV_MIL__c.object
<CustomObject>
    <fields>
        <fullName>CDE_STATUS_MIL__c</fullName>
        <description>Military Status</description>
        <label>Military Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00830</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Date Beginuence effvory</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Date Enduence effvory</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client ID</description>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Military Status</relationshipLabel>
        <relationshipName>T_SBSD_INDIV26</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Military Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IDN_CLIENT__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Military Status ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Military Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>